# Nito-core

./: .cirrus.yml  .gitignore  CONTRIBUTING.md  COPYING  LICENSE  Makefile.am  README.md  SECURITY.md  configure.ac  libnitoconsensus.pc.in
.tx/: config
build-aux/m4/: nito_qt.m4
build_msvc/: .gitignore  README.md  msvc-autogen.py  nito.sln  nito_config.h.in  vcpkg.json
build_msvc/bench_nito/: bench_nito.vcxproj.in
build_msvc/libnito_consensus/: libnito_consensus.vcxproj
build_msvc/libnito_qt/: libnito_qt.vcxproj
build_msvc/nito-cli/: nito-cli.vcxproj
build_msvc/nito-qt/: nito-qt.vcxproj
build_msvc/nito-tx/: nito-tx.vcxproj
build_msvc/nito-util/: nito-util.vcxproj
build_msvc/nito-wallet/: nito-wallet.vcxproj
build_msvc/nitod/: nitod.vcxproj
build_msvc/test_nito/: test_nito.vcxproj
build_msvc/test_nito-qt/: test_nito-qt.vcxproj
ci/: README.md  lint_imagefile
ci/lint/: 06_script.sh  container-entrypoint.sh
ci/test/: 00_setup_env_i686_multiprocess.sh  (+6 more)
contrib/: README.md  valgrind.supp
contrib/devtools/nito-tidy/: CMakeLists.txt  README  example_logprintf.cpp  logprintf.cpp  logprintf.h  nito-tidy.cpp
doc/: Doxyfile.in  JSON-RPC-interface.md  README.md  README_doxygen.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  bips.md  build-android.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  cjdns.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  external-signer.md  files.md  fuzzing.md  guix.md  i2p.md  init.md  managing-wallets.md  multiprocess.md  multisig-tutorial.md  nito-conf.md  offline-signing-tutorial.md  p2p-bad-ports.md  productivity.md  psbt.md  reduce-memory.md  reduce-traffic.md  release-notes.md  release-process.md  shared-libraries.md  (+5 more)
doc/man/: Makefile.am  nito-cli.1  nito-qt.1  nito-tx.1  nito-util.1  nito-wallet.1  nitod.1
share/: setup.nsi.in
src/: .clang-tidy  Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qt_locale.include  Makefile.qttest.include  Makefile.test.include  addrdb.cpp  addrdb.h  addresstype.cpp  addresstype.h  addrman.cpp  addrman.h  addrman_impl.h  arith_uint256.cpp  arith_uint256.h  attributes.h  banman.cpp  banman.h  base58.cpp  base58.h  bech32.cpp  bech32.h  bip324.cpp  bip324.h  blockencodings.cpp  blockencodings.h  blockfilter.cpp  blockfilter.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkqueue.h  clientversion.cpp  clientversion.h  coins.cpp  (+122 more)
test/: README.md  get_previous_releases.py
(+1639 files in other folders)
