dist_man1_MANS=

if BUILD_BITCOIND
  dist_man1_MANS+=nitod.1
endif

if ENABLE_QT
  dist_man1_MANS+=nito-qt.1
endif

if BUILD_BITCOIN_CLI
  dist_man1_MANS+=nito-cli.1
endif

if BUILD_BITCOIN_TX
  dist_man1_MANS+=nito-tx.1
endif

if BUILD_BITCOIN_UTIL
  dist_man1_MANS+=nito-util.1
endif

if ENABLE_WALLET
if BUILD_BITCOIN_WALLET
  dist_man1_MANS+=nito-wallet.1
endif
endif
